web-infras/parser/tests/fixtures/self-added/await-in-async-context/await-in-func-body/no-asyn-context-expression/output.txt
[SyntaxError]: Missing semicolon or line terminator. (2,11)
2|    await 10;
 |         ^
